# django_sso_auth

./: .gitignore  404.html  LICENSE  Makefile  README.md  changelog.html  contributing.html  faqs.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
components/additional/: index.html
components/core/: index.html
django_sso_auth/: __init__.py  apps.py  urls.py  utils.py  views.py
django_sso_auth/admin/: __init__.py  backend.py
django_sso_auth/conf/: __init__.py  settings.py
django_sso_auth/drf/: __init__.py  authentication.py  permissions.py
django_sso_auth/templates/admin/: login.html
docs/: changelog.md  contributing.md  faqs.md  index.md
docs/tutorial/: step_1.md
features/: bearer_token.html  sso.html
mock_project/app_one/: serializers.py  views.py
mock_project/conf/: settings.py  urls.py
scripts/: format.sh  lint.sh  test.sh
search/: search_index.js  search_index.json
tests/: conftest.py  test_authentication.py  test_backend.py  test_drf_authentication.py  test_okta_backend.py  test_settings.py
tests/mocks/: oauth.py
tutorial/: step_1.html  step_2.html  step_3.html  step_4.html  step_5.html
