[project]
name = "django_sso_auth"
description = "Django SSO Auth"
authors = [
    {name = "godd0t", email = "lirrishala@gmail.com"},
]
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14.0",
    "authlib>=1.3.0",
    "pyjwt>=2.8.0",
    "requests>=2.28.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "django_sso_auth/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["django_sso_auth"]

[tool.hatchling]
allow-direct-references = true


[tool.pdm]
distribution = true

[tool.pdm.scripts]

# Linting
ruff_lint = "ruff check django_sso_auth tests mock_project"
lint = {composite = ["ruff_lint"]} # Keep this line if needed to add more linting tools

# Formatting
ruff_format = "ruff format django_sso_auth tests mock_project"
format = {composite = ["ruff_format"]}

# Testing
coverage_run = "coverage run -m pytest"
coverage_report = "coverage report -m --skip-covered"
test = {composite = ["coverage_run", "coverage_report"]}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-django>=4.8.0",
    "ruff>=0.4.5",
    "pytest-sugar>=1.0.0",
    "coverage[toml]>=7.5.1",
    "faker>=26.0.0",
    "pytest-mock>=3.14.0",
]
docs = [
    "mkdocs-material>=9.5.28",
    "mkdocstrings-python>=1.10.5",
    "markdown-include>=0.8.1",
    "pymdown-extensions>=10.8.1",
    "mkdocs-markdownextradata-plugin>=0.2.5",
    "mdx-include>=1.4.2",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --force-sugar --no-migrations --reuse-db --log-cli-level=INFO"
testpaths = [
    "src/tests",
    "tests",
]
pythonpath = [".", "mock_project"]
python_files = "tests.py test_*.py *_tests.py"
DJANGO_SETTINGS_MODULE = "mock_project.conf.settings"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/urls.py",
    "*/settings/*",
    "*/wsgi.py",
    "manage.py",
    "*__init__.py",
]
source = ["django_sso_auth"]

# LINTING
[tool.ruff]
output-format = "concise"
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "I", "E"
]
ignore = [
    "W191", "E111", "E114", "E117",
    "Q000", "Q001", "Q002", "Q003",
    "COM812", "COM819", "E501"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88


[tool.ruff.lint.pydocstyle]
convention = "google"